searching for the city

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h1>Search for a City:</h1>
             </div>
             <div class="row">
-                <input type="text" class="searchInput" placeholder="Toronto">
+                <input type="text" class="searchInput" id="city" placeholder="Toronto">
                 <button type="submit" class="searchBtn">
                     <i class="fas fa-search"></i>
                 </button>
