--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
                 <h1>Search for a City:</h1>
             </div>
             <div class="row">
-                <input type="text" class="searchInput" id="city" placeholder="Toronto">
+                <input type="text" class="searchInput" id="city"  placeholder="Toronto">
                 <button type="submit" class="searchBtn">
                     <i class="fas fa-search"></i>
                 </button>
             </div>
             <div class="historyItems"></div>
         </div>
-        <div class="col-two-container">
+        <div class="col-two-container"  class= "current-weather-container" class="searched-city" >
             <div class="forecast">
                 <div class="row">
                     <h1 class="cityName">City Name</h1>
