--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="historyItems"></div>
         </div>
-        <div class="col-two-container"  class= "current-weather-container" class="searched-city" >
+        <div class="col-two-container searched-city" id="current-weather-container">
             <div class="forecast">
                 <div class="row">
                     <h1 class="cityName">City Name</h1>
