--- a/index.html
+++ b/index.html
@@ -1,66 +1,65 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://kit.fontawesome.com/80833262c1.js" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <title>Weather App</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="assets/style.css" rel="stylesheet">
+
+    <title>Weather Where You Are</title>
 </head>
 
 <body>
+    <nav class="navbar navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">
+            <i class="material-icons">wb_sunny</i>&nbsp;Weather where you are!</a>
+    </nav>
 
-    <header class="header">
-        <h1>Weather Dashboard</h1>
-    </header>
-
-    <div class="container">
-        <div class="search">
-            <div class="row">
-                <h1>Search for a City:</h1>
-            </div>
-            <div class="row">
-                <input type="text" class="searchInput" id="city"  placeholder="Toronto">
-                <button type="submit" class="searchBtn">
-                    <i class="fas fa-search"></i>
-                </button>
-            </div>
-            <div class="historyItems"></div>
-        </div>
-        <div class="col-two-container searched-city" id="current-weather-container">
-            <div class="forecast">
-                <div class="row">
-                    <h1 class="cityName">City Name</h1>
-                    <h1 class="currentDate"></h1>
-                    <img class="weatherIcon"></img>
+    <div class="container-fluid">
+        <div class="row mt-3">
+            <div class="col-md-3 searcharea">
+                <h2 class="text-secondary">Search for a city:</h2>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" id="searchinput" type="search" aria-label="Search">
+                    <div class="input-group-append">
+                        <button class="btn btn-primary" id="searchbtn" type="submit">
+                            <i class="material-icons">search</i>
+                        </button>
+                    </div>
                 </div>
-                <div class="row">
-                    <p class="temp">Temperature:</p>
-                </div>
-                <div class="row">
-                    <p class="humidity">Humidity:</p>
-                </div>
-                <div class="row">
-                    <p class="windSpeed">Wind Speed:</p>
-                </div>
-                <div class="row">
-                    <p class="uvIndex">UV Index:</p>
+                <div class="mt-5" id="prevSearches">
+                    <!--Buttons for previous searches here-->
                 </div>
             </div>
 
-            <div class="five-day-container">
-                <h1>5-Day Forecast:</h1>
-                <div class="card-row">
+            <div class="col-md-9">
+                <div class="container" id="earthforecast">
+                    <!--Weather for current location-->
                 </div>
             </div>
         </div>
+
     </div>
 
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="assets/script.js"></script>
 </body>
-<script src="assets/js/weather.js"></script>
 
 </html>
