--- a/index.html
+++ b/index.html
@@ -33,30 +33,30 @@
         <div class="col-two-container searched-city" id="current-weather-container">
             <div class="forecast">
                 <div class="row">
-                    <h1 class="cityName">City Name</h1>
-                    <h1 class="currentDate"></h1>
+                    <h1 class="cityName">City Name: <span id="cityname"></span></h1>>
+                    <h1 class="currentDate">Current Date: <span id="currentdate"></span></h1>
                     <img class="weatherIcon"></img>
                 </div>
                 <div class="row">
-                    <p class="temp">Temperature:</p>
+                    <p class="temp">Temperature: <span id="cityTemp"></span></p>
                 </div>
                 <div class="row">
-                    <p class="humidity">Humidity:</p>
+                    <p class="humidity">Humidity: <span id="cityHumid"></span></p>
                 </div>
                 <div class="row">
-                    <p class="windSpeed">Wind Speed:</p>
+                    <p class="windSpeed">Wind Speed: <span id="cityWind"></span></p>
                 </div>
                 <div class="row">
-                    <p class="uvIndex">UV Index:</p>
+                    <p class="uvIndex">UV Index: <span id="cityUv"></span></p>
                 </div>
             </div>
 
-            <div class="five-day-container">
+        </div>
+        <div class="five-day-container">
                 <h1>5-Day Forecast:</h1>
                 <div class="card-row">
                 </div>
             </div>
-        </div>
     </div>
 
 </body>
